add these lines of code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1143,15 +1143,15 @@ img {
 }
 
 .item-bg1 {
-    background-image: url(../images/home-one/home-one-img1.jpg)
+    background-image: url(../images/home-one/home-one-img6.jp.jpeg)
 }
 
 .item-bg2 {
-    background-image: url(../images/home-one/home-one-img2.jpg)
+    background-image: url(../images/home-one/home-one-img5.jp.jpeg)
 }
 
 .item-bg3 {
-    background-image: url(../images/home-one/home-one-img3.jpg)
+    background-image: url(../images/home-one/home-one-img4.jpg)
 }
 
 .banner-area {
