--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
 @import "https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&amp;display=swap";
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,500,700);
+@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 
 body {
     font-size: 15px;
@@ -1722,7 +1724,72 @@ ul.horizontal-slide li[class*="col"]:first-child {
     color: #0071dc
 }
 
-.services-area {
+main {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+  article {
+    margin: 1rem 0;
+  }
+  
+  /* Now lets do a Grid-based layout */
+  
+  @supports (display: grid) {
+    main { 
+      max-width: 10000px;
+      margin: 0;
+    }
+    article {
+      margin: 0;
+    }
+    .deals {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-gap: 1rem;
+    }
+  }
+    
+  .deals {
+    font-family: Avenir, Roboto, Helvetica, san-serif; 
+    font-size: 80%;
+    margin-top: 20px;
+  }
+  .sale-item {
+    display: flex;
+    flex-flow: column;
+    border:  1px solid black;
+    border-radius: 1rem;
+    padding:20PX;
+    margin-left:20px;
+    margin-right:20px;
+  }
+  .sale-item > h1 {
+    /* margin: 1rem 1rem 0; */
+    font-size: 20px;
+  }
+  .sale-item > ul {
+    margin: 0 0 1rem;
+  }
+
+  .sale-item > p {
+    margin: 0.25em 1rem 1rem;
+  }
+  .sale-item > img {
+    order: -1;
+    align-self: center;
+  }
+
+  .sale-item > button {
+    margin-top: auto; 
+    background: teal;
+    color: white;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 1rem;
+    font-size: 1.2rem;
+  }
+  
+  .services-area {
     background-color: #070b3b;
     position: relative
 }
@@ -1810,7 +1877,7 @@ ul.horizontal-slide li[class*="col"]:first-child {
 }
 
 .services-card h3 {
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 12px
 }
 
@@ -3174,7 +3241,7 @@ ul.horizontal-slide li[class*="col"]:first-child {
 }
 
 .brand-area {
-    position: relative
+    position: relative;   
 }
 
 .brand-area::before {
@@ -3213,7 +3280,8 @@ ul.horizontal-slide li[class*="col"]:first-child {
 .brand-item img {
     width: unset !important;
     text-align: center;
-    margin: 0 auto
+    margin: 0 auto;
+    height: 50px;
 }
 
 .clients-area {
