--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1747,7 +1747,8 @@ ul.horizontal-slide li[class*="col"]:first-child {
     max-width: 500px;
     color: #fff;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
+   
 }
 
 .services-area .section-title p {
@@ -1771,6 +1772,7 @@ ul.horizontal-slide li[class*="col"]:first-child {
     display: block;
     padding-left: 20px;
     margin-bottom: 40px;
+    margin-top:20px;
     
 }
 
@@ -2039,7 +2041,7 @@ ul.horizontal-slide li[class*="col"]:first-child {
 }
 
 .service-article .service-article-content .service-article-list li:hover {
-    color: #0071dc
+    color: #0071dc;
 }
 
 .service-article .service-article-content .service-article-list li:hover i {
