--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,7 @@ img {
 }
 
 .top-header-bg {
-    background-color: rgb(206, 9, 9);
+    background-color: #070b3b;
 }
 
 .top-left-side .top-header-text {
@@ -436,13 +436,13 @@ img {
 }
 
 .navbar-brand h1{ 
-color: red;
+color: #070b3b;
 font-size: 30px;
 font-weight: bold;
 }
 
 .mobile-nav .logo h1{ 
-    color: red;
+    color: #070b3b;
     font-size: 20px;
     font-weight: bold;
     }
@@ -1112,9 +1112,9 @@ font-weight: bold;
     position: relative;
     z-index: 1;
     background-position: center center;
-    background-size: cover;
+    background-size: cover; 
     background-repeat: no-repeat;
-    /* height:50%; */
+    /* height:100%; */
 }
 
 
@@ -1165,18 +1165,19 @@ font-weight: bold;
 }
 
 .item-bg1 {
-    background-image: url(../images/home-one/home-one-img1.jpg);
-    padding-top: 5%;
+    /* background-image: url(../images/home-one/home-one-img1.jpg); */
+    background-color: #070b3b; 
 }
 
 .item-bg2 {
-    background-image: url(../images/home-one/brand.png);
-    padding-top: 5%;
+    /* background-image: url(../images/home-one/brand.png); */
+    background-color: #070b3b; 
 }
 
 .item-bg3 {
-    background-image: url(../images/home-one/home-one-img2.jpg);
-    padding-top: 5%;
+    /* background-image: url(../images/home-one/home-one-img2.jpg); */
+    background-color: #070b3b;
+    
 }
 
 .banner-area {
@@ -5334,6 +5335,28 @@ background-color: #0071dc;
 }
 
 
+  @media screen and (min-width: 56em) {
+  .container-box {
+    display: flex;
+    width: 100%;
+    height: 500px;
+    margin-bottom: 10%;
+    margin-top: 5%;
+  }
+  
+  .text-box{
+    flex: 1;
+    color: white;
+    padding: 50px;
+  }
+
+  .text-box h2, p{
+      color: white;
+  }
+
+.text-box-heading p{
+    color:black;
+}
 
 .error {
     clear: both;
