--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ img {
     font-weight: 600;
     margin-top: 0;
     line-height: 1.2;
-    color: #252525;
+    color: white;
     margin-bottom: 0
 }
 
@@ -153,7 +153,9 @@ img {
     padding-top: 10px;
     margin-bottom: 0;
     max-width: 530px;
-    color: #444
+    color: white;
+    text-align: justify;
+    
 }
 
 .sp-color1 {
@@ -1219,13 +1221,13 @@ font-weight: bold;
     height:10%;
 }
 
-
 .banner-area-two {
     position: relative;
     z-index: 1;
     background-color: #f8f8f8;
-    margin-left: 60px;
-    margin-right: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+    
 }
 
 .banner-area-two::before {
@@ -1268,17 +1270,18 @@ ul.horizontal-slide li[class*="col"]:first-child {
 }
 
 .banner-head{
-    color:red;
+    color:#dc3545;
     font-size: 40px;
 }
 
 .banner-content h1 {
-    font-size: 20px;
+    font-size: 15px;
     color: #1678c9;
     font-weight: 600;
     max-width: 680px;
     line-height: 1.2;
-    margin-bottom: 20px
+    margin-bottom: 20px;
+    text-align: justify;
 }
 
 .banner-content p {
@@ -1477,7 +1480,8 @@ ul.horizontal-slide li[class*="col"]:first-child {
 }
 
 .about-content .about-content-card p {
-    margin-bottom: 0
+    margin-bottom: 0;
+    text-align: justify;
 }
 
 .about-content .about-list {
@@ -1539,7 +1543,7 @@ ul.horizontal-slide li[class*="col"]:first-child {
     width: 30%;
     height: 40%;
     background-color: transparent;
-    border: 3px solid #ffc221;
+
     bottom: -10px;
     right: -40px;
     border-radius: 35px
@@ -1577,6 +1581,10 @@ ul.horizontal-slide li[class*="col"]:first-child {
     color: #ffc221;
     font-weight: 700;
     margin-bottom: 0
+}
+
+.about-img h2{
+    color: rgb(218, 16, 16);
 }
 
 .about-img .sub-content span {
@@ -1926,7 +1934,7 @@ ul.horizontal-slide li[class*="col"]:first-child {
 }
 
   .services-area {
-    background-color: #0f0758;
+    /* background-color: #0f0758; */
     position: relative
 }
 
@@ -2387,7 +2395,8 @@ ul.horizontal-slide li[class*="col"]:first-child {
 }
 
 .choose-area {
-    background-color: #070b3b
+    background: white;
+    
 }
 
 .choose-content {
@@ -2400,7 +2409,7 @@ ul.horizontal-slide li[class*="col"]:first-child {
 }
 
 .choose-content .section-title p {
-    color: #fff
+    color:black
 }
 
 .choose-content .choose-content-card {
@@ -2425,13 +2434,13 @@ ul.horizontal-slide li[class*="col"]:first-child {
 .choose-content .choose-content-card .content h3 {
     margin-top: 10px;
     margin-bottom: 30px;
-    color: #fff
+    color: black
 }
 
 .choose-content .choose-content-card p {
     margin-top: 5px;
     margin-bottom: 0;
-    color: #fff
+    color: black
 }
 
 .choose-img {
@@ -2442,6 +2451,126 @@ ul.horizontal-slide li[class*="col"]:first-child {
     border-radius: 15px
 }
 
+
+/* team */
+.heading-title {
+    margin-bottom: 100px;
+}
+.text-center {
+    text-align: center;
+}
+.heading-title h3 {
+    margin-bottom: 0;
+    letter-spacing: 2px;
+    font-weight: normal;
+}
+.p-top-30 {
+    padding-top: 30px;
+}
+.half-txt {
+    width: 60%;
+    margin: 0 auto;
+    display: inline-block;
+    line-height: 25px;
+    color: #7e7e7e;
+}
+.text-uppercase {
+    text-transform: uppercase;
+}
+
+.team-member, .team-member .team-img {
+    position: relative;
+}
+.team-member {
+    overflow: hidden;
+}
+.team-member, .team-member .team-img {
+    position: relative;
+}
+
+.team-hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: 0;
+    border: 20px solid rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 255, 255, 0.90);
+    opacity: 0;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+}
+.team-member:hover .team-hover .desk {
+    top: 35%;
+}
+.team-member:hover .team-hover, .team-member:hover .team-hover .desk, .team-member:hover .team-hover .s-link {
+    opacity: 1;
+}
+.team-hover .desk {
+    position: absolute;
+    top: 0%;
+    width: 100%;
+    opacity: 0;
+    -webkit-transform: translateY(-55%);
+    -ms-transform: translateY(-55%);
+    transform: translateY(-55%);
+    -webkit-transition: all 0.3s 0.2s;
+    transition: all 0.3s 0.2s;
+    padding: 0 20px;
+}
+.desk, .desk h4, .team-hover .s-link a {
+    text-align: center;
+    color: #222;
+}
+.team-member:hover .team-hover .s-link {
+    bottom: 10%;
+}
+.team-member:hover .team-hover, .team-member:hover .team-hover .desk, .team-member:hover .team-hover .s-link {
+    opacity: 1;
+}
+.team-hover .s-link {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    opacity: 0;
+    text-align: center;
+    -webkit-transform: translateY(45%);
+    -ms-transform: translateY(45%);
+    transform: translateY(45%);
+    -webkit-transition: all 0.3s 0.2s;
+    transition: all 0.3s 0.2s;
+    font-size: 35px;
+}
+.desk, .desk h4, .team-hover .s-link a {
+    text-align: center;
+    color: #222;
+}
+.team-member .s-link a {
+    margin: 0 10px;
+    color: #333;
+    font-size: 16px;
+}
+.team-title {
+    position: static;
+    padding: 20px 0;
+    display: inline-block;
+    letter-spacing: 2px;
+    width: 100%;
+}
+.team-title h5 {
+    margin-bottom: 0px;
+    display: block;
+    text-transform: uppercase;
+}
+.team-title span {
+    font-size: 12px;
+    text-transform: uppercase;
+    color: #a5a5a5;
+    letter-spacing: 1px;
+}
+
+/* end */
 .build-area {
     position: relative;
     z-index: 1
@@ -2927,15 +3056,15 @@ ul.horizontal-slide li[class*="col"]:first-child {
 .counter-another-content i {
     position: absolute;
     line-height: 1;
-    font-size: 60px;
+    font-size: 40px;
     top: 3px;
     left: 0;
-    color: #0071dc
+    color: #0071dc;
 }
 
 .counter-another-content h3 {
     color: #252525;
-    font-size: 35px;
+    font-size: 20px;
     line-height: 1;
     margin-bottom: 8px
 }
@@ -2959,7 +3088,7 @@ ul.horizontal-slide li[class*="col"]:first-child {
 }
 
 .counter-shape .shape1 img {
-    max-width: 200px
+    max-width: 20px
 }
 
 .counter-shape .shape2 {
@@ -2970,8 +3099,93 @@ ul.horizontal-slide li[class*="col"]:first-child {
 }
 
 .counter-shape .shape2 img {
-    max-width: 200px
+    max-width: 20px
 }
+
+/* buttns container */
+.fill:hover,
+.fill:focus {
+  box-shadow: inset 0 0 0 4em var(--hover);
+}
+
+.pulse:hover,
+.pulse:focus {
+  -webkit-animation: pulse 1s;
+          animation: pulse 1s;
+  box-shadow: 0 0 0 4em rgba(255, 255, 255, 0);
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 var(--hover);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 var(--hover);
+  }
+}
+.close:hover,
+.close:focus {
+  box-shadow: inset -12em 0 0 0 var(--hover), inset 3.5em 0 0 0 var(--hover);
+}
+
+.up:hover,
+.up:focus {
+  box-shadow: inset 0 -12em 0 0 var(--hover);
+}
+
+.slide:hover,
+.slide:focus {
+  box-shadow: inset 15em 0 0 0 var(--hover);
+}
+
+.fill {
+  --color: #dc3545;
+  --hover: #dc3545;
+}
+
+.close {
+    --color: #dc3545;
+    --hover: #dc3545;
+}
+
+.up {
+    --color: #dc3545;
+    --hover: #dc3545;
+}
+
+.slide {
+    --color: #dc3545;
+    --hover: #dc3545;
+}
+
+button{
+  color: #dc3545;
+  transition: 0.25s;
+  width: 40%;
+}
+button:hover, button:focus {
+  border-color: var(--hover);
+  color: #fff;
+}
+
+button {
+  background: none;
+  border: 2px solid;
+  font: inherit;
+  line-height: 1;
+  margin: 0.5em;
+  padding: 1em 2em;
+}
+
+.buttons{
+    margin-left: 50px;
+}
+
+
+
 
 /* main-projects container */
 
@@ -3704,7 +3918,7 @@ background-color: #0071dc;
   .logo-scroller {
     position: relative;
     overflow: hidden;
-    width: 1920px; /* match animation translate */
+    width: 100%;/* match animation translate */
     margin: 0 auto;
   }
   
@@ -5784,8 +5998,10 @@ background-color: #0071dc;
   
   .client-box{
       background-color: white;
-      margin-left: 60px;
-      margin-right: 60px;
+      padding-left: 20px;
+      /* margin-left: 60px;
+      margin-right: 60px; */
+      margin-bottom: 30px;
   }
   .text-box{
     flex: 1;
