--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ img {
     font-weight: 600;
     margin-top: 0;
     line-height: 1.2;
-    color: white;
+    color: black;
     margin-bottom: 0
 }
 
@@ -153,7 +153,7 @@ img {
     padding-top: 10px;
     margin-bottom: 0;
     max-width: 530px;
-    color: white;
+    color: black;
     text-align: justify;
     
 }
